--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.6.0",
+    "@auth/prisma-adapter": "2.7.2",
     "@hookform/resolvers": "^3.9.1",
     "@mdx-js/mdx": "^3.1.0",
     "@prisma/client": "^5.14.0",
@@ -58,11 +58,11 @@
     "embla-carousel-react": "^8.3.1",
     "geist": "^1.3.0",
     "input-otp": "^1.2.5",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
+    "next": "15.0.3-canary.4",
     "next-auth": "^4.24.7",
     "next-mdx-remote": "^5.0.0",
-    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "9.2.1",
     "react-dom": "^18.3.1",
@@ -79,11 +79,13 @@
   },
   "devDependencies": {
     "@tilli-pro/eslint-config": "^2.0.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
