--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.1",
-    "geist": "^1.3.0",
     "input-otp": "^1.2.5",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
@@ -99,6 +98,6 @@
   },
   "packageManager": "pnpm@9.12.1",
   "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "tsx prisma/seed"
   }
 }
