--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "2.7.2",
+    "@aws-sdk/client-s3": "^3.699.0",
     "@hookform/resolvers": "^3.9.1",
     "@mdx-js/mdx": "^3.1.0",
     "@prisma/client": "^5.14.0",
