--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 DATABASE_URL=""
+
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL="https://careers.tilli.pro"
+
 NUDGE_API_KEY=""
 NUDGE_OTP_ID=
+
+AWS_REGION=""
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+S3_BUCKET=""
