--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@auth/prisma-adapter": "2.7.2",
     "@aws-sdk/client-s3": "^3.699.0",
+    "@faker-js/faker": "^9.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@icons-pack/react-simple-icons": "^10.2.0",
     "@mdx-js/mdx": "^3.1.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.2.1",
@@ -63,6 +65,7 @@
     "next": "15.0.3-canary.4",
     "next-auth": "^4.24.7",
     "next-mdx-remote": "^5.0.0",
+    "next-view-transitions": "^0.3.2",
     "react": "^18.3.1",
     "react-day-picker": "9.2.1",
     "react-dom": "^18.3.1",
