--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
@@ -49,6 +50,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
     "@t3-oss/env-nextjs": "0.11.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
@@ -59,6 +62,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.1",
+    "framer-motion": "^11.12.0",
     "input-otp": "^1.2.5",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
@@ -70,6 +74,7 @@
     "react-day-picker": "9.2.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-icon-cloud": "^4.1.4",
     "react-resizable-panels": "^2.1.6",
     "recharts": "^2.13.2",
     "server-only": "^0.0.1",
@@ -77,6 +82,8 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.170.0",
+    "three-globe": "^2.35.2",
     "vaul": "^1.1.1",
     "zod": "^3.23.8"
   },
@@ -86,6 +93,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.170.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "autoprefixer": "^10.4.20",
