--- a/package.json
+++ b/package.json
@@ -61,11 +61,13 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "dotted-map": "^2.2.3",
     "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.12.0",
     "input-otp": "^1.2.5",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
+    "motion": "^11.17.0",
     "next": "15.0.3-canary.4",
     "next-auth": "^4.24.7",
     "next-mdx-remote": "^5.0.0",
