--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:studio": "prisma studio",
     "dev": "next dev",
     "postinstall": "prisma generate",
-    "lint": "next lint",
+    "lint": "eslint . --fix",
     "start": "next start"
   },
   "dependencies": {
