ci: debug build output

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,9 @@ jobs:
 
       - name: Build Next.js application
         run: pnpm build
+        
+      - name: Debug List files
+        run: ls -R
 
       - name: Upload .next artifact
         uses: actions/upload-artifact@v3
