--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,6 +66,7 @@ jobs:
           compression-level: 0
           retention-days: 3
           overwrite: true
+          include-hidden-files: true
           
   deploy:
     name: Deploy to build branch
