--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,6 +85,9 @@ jobs:
         with:
           name: next-build
           path: next-build  # Download artifact to a folder named next-build
+      
+      - name: LS
+        run: ls -la
 
       - name: Replace old .next with new build
         run: |
