feat: update roles script

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "db:seed": "prisma db seed",
+    "db:update-roles": "tsx ./prisma/update-roles",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "eslint . --fix",
@@ -99,6 +101,7 @@
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.7",
     "ora": "^8.1.1",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
