--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,31 @@ on:
       - main
       
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: read
+    outputs:
+      files: ${{ steps.filter.outputs.files }}
+    steps:
+    # For pull requests it's not necessary to checkout the code
+    - uses: dorny/paths-filter@v3
+      id: filter
+      with:
+        filters: |
+          files:
+            - 'next.config.js'
+            - 'package.json'
+            - 'pnpm-lock.yaml'
+            - 'public/**'
+            - 'src/**'
+            - 'prisma/schema.prisma'
+            - 'prisma/migrations/**'
   build:
     name: Build
     runs-on: ubuntu-latest
+    needs: changes
+    if: ${{ needs.changes.outputs.files == 'true' }}
     outputs:
       build-artifact: ${{ steps.upload-artifact.outputs.artifact-url }}
     steps:
@@ -38,6 +60,7 @@ jobs:
         with:
           node-version: 22
           check-latest: true
+          
       - name: Enable and prepare pnpm
         run: |
           corepack enable
@@ -82,7 +105,8 @@ jobs:
   deploy:
     name: Deploy to build branch
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, changes]
+    if: ${{ needs.changes.outputs.files == 'true' }}
     steps:
       - name: Check out repository (build branch)
         uses: actions/checkout@v4
