--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
   },
   "devDependencies": {
     "@tilli-pro/eslint-config": "0.3.7",
+    "@tilli-pro/prettier-config": "^0.1.3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
