--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ on:
       
 jobs:
   changes:
+    name: Check for file changes
     runs-on: ubuntu-latest
     permissions:
       pull-requests: read
