--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,14 @@ NEXTAUTH_SECRET=""
 NEXTAUTH_URL="https://careers.tilli.pro"
 
 NUDGE_API_KEY=""
-NUDGE_OTP_ID=
+NUDGE_OTP_ID=""
+NUDGE_SUBMIT_ID=""
+NUDGE_NOTIFY_ID=""
+
+HIRING_SUPER_EMAIL=""
+HIRING_SUPER_NAME=""
+
+CAREERS_EMAIL=""
 
 AWS_REGION=""
 AWS_ACCESS_KEY_ID=""
