--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,6 +94,7 @@ jobs:
           echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> .env
           echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> .env
           echo "S3_BUCKET=${{ secrets.S3_BUCKET }}" >> .env
+          echo "CAREERS_EMAIL=${{ secrets.CAREERS_EMAIL }}" >> .env
           echo "NEXT_PUBLIC_ENV=production" >> .env
 
       - name: Build Next.js application
