--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@icons-pack/react-simple-icons": "^10.2.0",
     "@mdx-js/mdx": "^3.1.0",
+    "@octokit/webhooks": "^13.7.4",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
